# builder-pattern

./: Cargo.toml  README.md
.github/workflows/: build_macos.yml  build_ubuntu.yml  build_wasm.yml  build_windows.yml  pull-request.yml
builder-pattern/: Cargo.toml  README.md  README.tpl.md
builder-pattern-macro/: Cargo.toml
builder-pattern-macro/src/: attributes.rs  field.rs  lib.rs  struct_impl.rs  struct_input.rs
builder-pattern-macro/src/builder/: builder_decl.rs  builder_functions.rs  builder_impl.rs  functions.rs  mod.rs
builder-pattern-test/: Cargo.toml
builder-pattern-test/src/: lib.rs  main.rs  test.rs
builder-pattern/examples/: async-validator.rs  async-validator1.rs  async-validator2.rs  async.rs  closure.rs  complex-type.rs  default-fn.rs  default-generics-2.rs  default-generics.rs  default-infer.rs  default.rs  defaulted-closure.rs  documentation.rs  fail-visibility1.rs  fail-visibility2.rs  infer-expand.rs  infer-expect.rs  infer.rs  into-with-default.rs  into-with-validator.rs  into.rs  into2.rs  late-bound-expand.rs  lazy-validator.rs  lazy.rs  no-infer.rs  test.rs  test2.rs  validator.rs  validator1.rs  validator2.rs  validator3.rs  visibility.rs  visibility1.rs  visibility2.rs
builder-pattern/src/: lib.rs  list.rs  refl.rs  setter.rs  structure.rs
builder-pattern/tests/: async-validator1.rs  async-validator2.rs  async.rs  compile-fail.rs  complex-types.rs  default-fn.rs  default-infer.rs  default.rs  documentation.rs  into-with-validator.rs  into1.rs  into2.rs  lazy-validator.rs  lazy.rs  validator.rs  visibility1.rs  visibility2.rs
builder-pattern/tests/compile-fail/: visibility.stderr
examples/: default.rs  documentation.rs  into.rs  lazy.rs  validator.rs  visibility.rs
scripts/: publish.ps1  publish.sh  test-examples.ps1  test-examples.sh  test-no-future.ps1  test-no-future.sh
src/: attributes.rs  documents.rs  field.rs  lib.rs  struct_impl.rs  struct_input.rs  structure.rs
src/builder/: builder_impl.rs  decl.rs  functions.rs  mod.rs
test-no-future/: Cargo.toml
test-no-future/examples/: empty.rs  lazy.rs  validator.rs
