[package]
name = "builder-pattern"
version = "0.3.2"
edition = "2018"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
license = "MIT"
description = "A derivable macro for declaring a builder pattern."
repository = "https://github.com/SeokminHong/builder-pattern"
homepage = "https://github.com/SeokminHong/builder-pattern"
documentation = "https://docs.rs/builder-pattern"
categories = ["development-tools", "rust-patterns"]
keywords = ["builder", "pattern", "macro", "derive", "struct"]
readme = "README.md"

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
