[package]
name = "builder-pattern-macro"
version = "0.4.0"
edition = "2018"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
license = "MIT"
description = "A derivable macro for declaring a builder pattern."
repository = "https://github.com/SeokminHong/builder-pattern"
homepage = "https://github.com/SeokminHong/builder-pattern"
documentation = "https://docs.rs/builder-pattern"
categories = ["development-tools", "rust-patterns"]
keywords = ["builder", "pattern", "macro", "derive", "struct"]
readme = "README.md"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
bitflags = "1.3"

[lib]
proc-macro = true
