[package]
name = "builder-pattern-macro"
version = "0.4.2"
edition = "2018"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
license = "MIT"
description = "A macro crate for builder-pattern. Do not use this crate directly."
repository = "https://github.com/SeokminHong/builder-pattern-macro"
homepage = "https://github.com/SeokminHong/builder-pattern-macro"
categories = ["development-tools", "rust-patterns"]
keywords = ["builder", "pattern", "macro", "derive", "struct"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
bitflags = "2.2.1"

[lib]
proc-macro = true
