[package]
name = "builder-pattern"
version = "0.4.2"
edition = "2018"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
license = "MIT"
description = "A derivable macro for declaring a builder pattern."
repository = "https://github.com/SeokminHong/builder-pattern"
homepage = "https://github.com/SeokminHong/builder-pattern"
documentation = "https://docs.rs/builder-pattern"
categories = ["development-tools", "rust-patterns"]
keywords = ["builder", "pattern", "macro", "derive", "struct"]
readme = "README.md"

[dependencies]
builder-pattern-macro = { version = "0.4.2", path = "../builder-pattern-macro" }
futures = { version = "0.3", optional = true }

[dev-dependencies]
uuid = { version = "1.3.2", features = ["v4"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
trybuild = "1.0.80"

[features]
default = ["future"]
future = ["futures"]
