[package]
name = "test-no-future"
version = "0.4.2"
edition = "2018"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
license = "MIT"

[dependencies]
builder-pattern = { version = "0.4.2", path = "../builder-pattern", default-features = false }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
